[gd_scene load_steps=18 format=3 uid="uid://cjs6vsyy5fac8"]

[ext_resource type="Script" path="res://scenes/Level1.gd" id="1_wa272"]
[ext_resource type="Texture2D" uid="uid://d8bjhij8ne3x" path="res://assets/materials/HDR_029_Sky_Cloudy_Bg.jpg" id="2_fg5sy"]
[ext_resource type="MeshLibrary" uid="uid://26nfjd80povy" path="res://scenes/terrain.tres" id="3_px31r"]
[ext_resource type="PackedScene" uid="uid://dek68pf3o8v1t" path="res://scenes/character.tscn" id="4_p27fe"]
[ext_resource type="Script" path="res://scenes/FollowScelic.gd" id="5_dpjjs"]
[ext_resource type="PackedScene" uid="uid://c1fo2ga4labv" path="res://scenes/UI.tscn" id="6_l8d30"]
[ext_resource type="PackedScene" uid="uid://cvn75iwbhmrlk" path="res://assets/SkeletonHat.glb" id="7_2hiwv"]
[ext_resource type="PackedScene" uid="uid://bxwhw56i7piv6" path="res://scenes/platform.tscn" id="8_nhu8a"]
[ext_resource type="PackedScene" uid="uid://camav0kvixgm3" path="res://scenes/portal.tscn" id="9_tcucw"]
[ext_resource type="Script" path="res://scenes/cache_camera.gd" id="10_wjvks"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_gxtmq"]
panorama = ExtResource("2_fg5sy")

[sub_resource type="Sky" id="Sky_bu1pv"]
sky_material = SubResource("PanoramaSkyMaterial_gxtmq")

[sub_resource type="Environment" id="Environment_84bnq"]
background_mode = 2
sky = SubResource("Sky_bu1pv")
ambient_light_source = 3
ssao_enabled = true
ssil_enabled = true
sdfgi_enabled = true
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.537255, 0.847059, 0.921569, 1)
fog_density = 0.001
volumetric_fog_density = 0.01
volumetric_fog_albedo = Color(1, 1, 0.886275, 1)
volumetric_fog_sky_affect = 0.0
adjustment_enabled = true

[sub_resource type="Animation" id="Animation_jwihf"]
length = 0.001

[sub_resource type="Animation" id="Animation_i7ljx"]
resource_name = "idle"
length = 4.0
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lmysw"]
_data = {
"RESET": SubResource("Animation_jwihf"),
"idle": SubResource("Animation_i7ljx")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_3wy8r"]
size = Vector3(6.02704, 3.40694, 11.9364)

[node name="World" type="Node3D"]
script = ExtResource("1_wa272")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_84bnq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.568605, 0.653223, -0.499988, -1.92041e-08, 0.607806, 0.794085, 0.822611, 0.451521, -0.345602, 0, 13.0112, 0)
shadow_enabled = true

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("3_px31r")
cell_size = Vector3(5, 2.5, 10)
cell_center_y = false
cell_scale = 0.5
data = {
"cells": PackedInt32Array(65515, 1, 4, 65516, 1, 4, 65517, 1, 4, 65518, 1, 4, 65519, 1, 4, 65520, 1, 4, 65521, 1, 4, 65522, 1, 4, 65523, 1, 4, 65524, 1, 4, 65525, 1, 4, 65526, 1, 4, 65527, 1, 4, 65528, 1, 3, 65529, 1, 4, 65530, 1, 4, 65531, 1, 4, 65532, 1, 4, 65533, 1, 4, 65534, 1, 4, 65535, 1, 4, 0, 1, 4, 1, 1, 4, 2, 1, 4, 3, 1, 4, 4, 1, 4, 5, 1, 4, 6, 1, 4, 7, 1, 4, 8, 1, 4, 9, 1, 4, 10, 1, 4, 65515, 0, 0, 65516, 0, 0, 65517, 0, 0, 65518, 0, 0, 65519, 0, 3, 65520, 0, 0, 65521, 0, 0, 65522, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 3, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 3, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 3, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 3, 9, 0, 0, 10, 0, 4, 65515, 65535, 5, 65517, 65535, 4, 65519, 65535, 0, 65520, 65535, 2, 65521, 65535, 2, 65522, 65535, 2, 65523, 65535, 2, 65524, 65535, 2, 65525, 65535, 2, 65534, 65535, 5, 65535, 65535, 5, 0, 65535, 1, 1, 65535, 2, 2, 65535, 2, 3, 65535, 2, 4, 65535, 2, 5, 65535, 2, 6, 65535, 2, 7, 65535, 2, 8, 65535, 2, 9, 65535, 2, 10, 65535, 4, 196616, 0, 7, 262142, 0, 7, 196601, 0, 7, 196594, 0, 7, 196597, 0, 8, 196604, 0, 1441800, 131075, 0, 655368, 131078, 0, 8, 262150, 1, 8, 262146, 1, 1441800, 327676, 1, 655368, 327670, 1, 655368, 327664, 1, 1048584, 327660, 1, 8, 327662, 1, 7, 327668, 1, 1441799, 327674, 1, 655367, 262144, 1, 1048583, 131073, 0, 7, 196589, 0, 1048583, 131071, 65535, 1, 196606, 65535, 1, 131070, 65535, 5, 262141, 65535, 6, 262138, 65535, 6, 262135, 65535, 6, 393200, 65535, 6, 393201, 65535, 6, 65518, 65535, 4, 393202, 65535, 0, 393203, 65535, 0, 458740, 65535, 0, 524277, 65535, 0, 589814, 65535, 0, 655351, 65535, 0, 720888, 65535, 0, 720889, 65535, 0, 720890, 65535, 0, 720891, 65535, 0, 851965, 65535, 6, 917503, 65535, 6, 917505, 65535, 6, 917506, 65535, 6, 262124, 65535, 6, 262123, 65535, 6, 262122, 65535, 6, 262121, 65535, 6, 262120, 65535, 6, 65514, 1, 4, 65509, 1, 4, 65510, 1, 4, 65511, 1, 4, 65512, 1, 4, 65513, 1, 4, 65509, 0, 4, 65510, 0, 4, 65511, 0, 4, 65512, 0, 4, 65513, 0, 4, 65514, 0, 4, 65511, 65535, 10, 327655, 65535, 10, 589799, 65535, 2, 1310722, 65535, 2, 1310721, 65535, 2, 1310720, 65535, 2, 1376255, 65535, 2, 1376254, 65535, 2, 1376253, 65535, 2, 1376252, 65535, 2, 1376251, 65535, 2, 917504, 65535, 2)
}
metadata/_editor_floor_ = Vector3(0, 19, -1)

[node name="Skeleton" parent="." instance=ExtResource("4_p27fe")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 36.936, 2.51, -4.619)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 1.29219e-08, -8.64625e-08, 0, 0.989016, 0.147809, 8.74228e-08, 0.147809, -0.989016, 36.936, 11.1179, -16.2849)
script = ExtResource("5_dpjjs")
skelic_node = NodePath("../Skeleton")

[node name="UI" parent="." instance=ExtResource("6_l8d30")]

[node name="Hat" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.35082, 55.5104, -5)

[node name="SkeletonHat" parent="Hat" instance=ExtResource("7_2hiwv")]
transform = Transform3D(0.998703, 0.0509298, -0.000850576, -0.0509053, 0.998532, 0.0185667, 0.00179493, -0.0184993, 0.999828, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hat"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_lmysw")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hat"]
shape = SubResource("BoxShape3D_3wy8r")

[node name="Platform" parent="." instance=ExtResource("8_nhu8a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.5, 35, -5)
target_path = NodePath("Marker3D")

[node name="Marker3D" type="Marker3D" parent="Platform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 0)

[node name="Portal" parent="." instance=ExtResource("9_tcucw")]
transform = Transform3D(0.254214, 0, -0.967148, 0, 1, 0, 0.967148, 0, 0.254214, -21.4956, 58.4592, -4.54536)

[node name="CahceShaders" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 35.9247, -50.8061)
current = true
script = ExtResource("10_wjvks")

[connection signal="died" from="Skeleton" to="." method="_on_skeleton_died"]
[connection signal="body_entered" from="Hat" to="." method="_on_hat_body_entered"]
[connection signal="body_entered" from="Portal" to="." method="_on_portal_body_entered"]
